# aiida-testing

./: .aiida-testing-config.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml
aiida_test_cache/: __init__.py  _config.py
aiida_test_cache/archive_cache/: __init__.py  _fixtures.py  _utils.py
aiida_test_cache/mock_code/: __init__.py  _cli.py  _env_keys.py  _fixtures.py  _hasher.py
aiida_testing/: _config.py
aiida_testing/archive_cache/: __init__.py  _fixtures.py  _utils.py
aiida_testing/mock_code/: __init__.py  _cli.py  _env_keys.py  _fixtures.py  _hasher.py
docs/source/: conf.py  index.rst
docs/source/developer_guide/: index.rst
docs/source/user_guide/: archive_cache.rst  get_started.rst  index.rst  mock_code.rst
tests/: conftest.py
tests/archive_cache/: test_archive_cache.py
tests/mock_code/: test_diff.py  test_failures.py  test_ignore_paths.py  test_isolated.py
